# KyberKeep

./: README.md  manifest.json  package-lock.json  package.json
BACKEND/: package-lock.json  package.json  server.js  vaults.txt
BACKEND/controllers/: generator_api_controllers.js  users_api_controller.js  users_api_controllers.js  vaults_api_controller.js  vaults_api_controllers.js
BACKEND/middlewares/: authenticate.js
BACKEND/models/: user.js  vault.js  vaults.js
BACKEND/routes/: api.js  generators.js  users.js  vaults.js
FRONTEND/: sample.html  test.http
FRONTEND/assets/css/: login_and_register.css  vaults.css
FRONTEND/controllers/: auth_controller.js  env.js  generator_controllers.js  password_controllers.js  user_controllers.js
FRONTEND/cryptography/: data_encryption.c
FRONTEND/cryptography_rs/: Cargo.toml
FRONTEND/cryptography_rs/src/: chacha20_crypto.rs  hmac_sha256.rs  kdf_argon2id.rs  lib.rs
FRONTEND/sample/: Cargo.toml
FRONTEND/sample/src/: bye.rs  hello.rs  lib.rs
FRONTEND/views/: generator.html  home.html  login.html  register.html  settings.html  tasks.html  vaults.html
assets/css/: login_register_forms.css  sidebar.css
controllers/: toggleForm.js
views/: generator.html  import.html  login.html  popup.html  register.html  vaults.html
