[package]
name = "cryptography_rs"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
argon2 = "0.5"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
hmac = "0.12"
sha2 = "0.10"
chacha20poly1305 = { version = "0.10", features = ["alloc"] }
pqc_dilithium = "0.2.0"

